--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
             <li><a class="fb" href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
         </ul>
     </nav>
+
+    <nav>
+        <ul class="center">
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">SOULTIONS</a></li>
+            <li><a href="#">PACKAGES</a></li>
+            <li><a href="#">FTP</a></li>
+            <li><a href="#">REGISTRATION</a></li>
+            <li><a href="#">CUSTOMER CORNER</a></li>
+            <li><a href="#">BTRC APPROVED TARIFF</a></li>
+            <li><a href="#">CONTACT US</a></li>
+            <li><a class="fb" href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a></li>
+        </ul>
+    </nav>
     <main>
         <section class="skill">
             <h1 class="center">SERVICES | WE OFFER</h1>
